--- a/okhttpdemo/build.gradle
+++ b/okhttpdemo/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 28
@@ -7,13 +6,13 @@ android {
 
 
     defaultConfig {
-        applicationId "com.wind.fitz.greendaodemo"
+        applicationId "com.fitz.okhttpdemo"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
-        //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -26,16 +25,9 @@ android {
 
 }
 
-greendao {
-    //版本号，升级时可配置
-    schemaVersion 1
-    daoPackage 'com.wind.fitz.greendaodemo'
-    targetGenDir 'src/main/java'
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation("com.squareup.okhttp3:okhttp:3.12.0")
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //testImplementation 'junit:junit:4.12'
