--- a/okhttpdemo/src/main/AndroidManifest.xml
+++ b/okhttpdemo/src/main/AndroidManifest.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fitz.abus">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.fitz.okhttpdemo">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".FitzApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/QMUI.Compat.NoActionBar">
-        <activity android:name=".activity.MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AddBusActivity" />
-
     </application>
 
 </manifest>
