0122 添加设置界面

--- a/buglydemo/src/main/AndroidManifest.xml
+++ b/buglydemo/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fitz.abus">
+    package="com.fitz.buglydemo">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,26 +10,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
+
+
     <application
-        android:name=".FitzApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/QMUI.Compat.NoActionBar">
-        <activity android:name=".activity.SettingsActivity"></activity>
-        <activity
-            android:name=".activity.MainActivity"
-            android:launchMode="singleTask">
+        android:theme="@style/QMUI.Compat">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AddBusActivity" />
-        <activity android:name=".activity.BusStopListActivity" />
 
         <activity
             android:name="com.tencent.bugly.beta.ui.BetaActivity"
@@ -44,8 +40,11 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths" />
+                android:resource="@xml/provider_paths"/>
         </provider>
+
     </application>
+
+
 
 </manifest>
