--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,27 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'org.greenrobot.greendao'
 
+// Create a variable called keystorePropertiesFile, and initialize it to your
+// keystore.properties file, in the rootProject folder.
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+
+// Initialize a new Properties() object called keystoreProperties.
+def keystoreProperties = new Properties()
+
+// Load your keystore.properties file into the keystoreProperties object.
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
+    signingConfigs {
+        release {
+            keyAlias 'Abus'
+            keyPassword '821072710'
+            storeFile file('E:/文档/个人项目/ABus/资源/AbusKey.jks')
+            storePassword '821072710'
+        }
+        config {
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.fitz.abus"
@@ -10,12 +30,25 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        flavorDimensions "default"
+        ndk {
+            //设置支持的SO库架构
+            abiFilters 'arm64-v8a', 'armeabi-v7a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
         //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+            //applicationIdSuffix ".debug"
         }
     }
     //优化编译速度
@@ -24,10 +57,20 @@ android {
         preDexLibraries true
         javaMaxHeapSize "4g"//越大越好
     }
-
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
+    }
+    productFlavors {
+        huawei {
+            minSdkVersion 24
+            applicationId 'com.fitz.abus'
+            targetSdkVersion 26
+            versionCode = 1
+            versionName '1.0'
+            versionCode 1
+            signingConfig signingConfigs.release
+        }
     }
 }
 
@@ -57,6 +100,10 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
+    //其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
+    //其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.2.0
 }
 
 android.applicationVariants.all { variant ->
