--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,11 @@ buildscript {
     }
 }
 
-
-
 allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
